   Copyright (C) 1996, 1997 Aladdin Enterprises.  All rights reserved.
   Unauthorized use, copying, and/or distribution prohibited.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

This file, NEWS-5, describes the changes in the most recent releases of
Aladdin's PCL 5 code, in reverse chronological order.

Fileset of 3/3/97
=================

(LPD) Fixes bugs:
	- The number-of-chords computation wasn't consistent for positive
and negative angles.  (pggeom.c)
	- The conversion factor from inches to plotter units was wrong.
(pggeom.h)
	- The HP-GL/2 translation for reverse landscape orientation was
incorrect.  (pgdraw.c)
	- The first point of HP-GL/2 beziers was defined incorrectly because
of a typo.  (pgdraw.c)
	- Entering polygon mode with PM[0] drew the current path instead of
clearing it.  (pgpoly.c)
	- The RA command didn't draw the rectangle or clear the path.
(pgpoly.c)

(LPD) Other changes:
	- Replaces the calculation of the center of a 3-point arc with a
simpler algorithm that doesn't use any transcendental functions.  (pggeom.c)
	- Cleans up comments, coding style, and other minor issues in
various files.  (pggeom.h, pgdraw.c, pgchar.c, pggeom.c, pgpoly.c,
pgvector.c)

Fileset of 2/26/97
==================

(LPD) Fixes bugs:
	- The main program had become incompatible with a library update.
(pcmain.c)
	- Downloaded TrueType fonts didn't allocate a char_glyph table.
(pcsfont.c)
	- TrueType fonts didn't set the pitch or height values in the font
structure, and didn't use those values for computing scale factors.
(pcfont.c, pcsfont.c)
	- 'system' was misspelled 'sytem' in one file.  (pginit.c)
	- A couple of functions didn't have prototypes.  (pcl5.mak,
pgdraw.c, pginit.c)

(LPD) Updates the makefiles to include the new version.mak file.
(bcpcl.mak, watcpcl.mak)

(LPD) Adds a printout of the maximum memory allocated; changes several
debugging printouts to be conditional on -Z:.  (pcmain.c)
